--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -18,7 +18,8 @@ ul {
 }
 
 img {
-    width: 100%;
+    width: 50%;
+    border-radius: 50%;
 }
 
 /* global classes */
@@ -76,3 +77,84 @@ header .nav-logo span {
 /*1200px
 992px
 540px*/
+.hero .container {
+    display: flex;
+    align-items: flex-start;
+    min-height: 75vh;
+    gap: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    flex-direction: column-reverse;
+
+
+    justify-content: flex-start;
+
+
+}
+
+.hero h1 {
+    font-size: 3rem;
+    line-height: 100%;
+}
+
+.hero h1 span {
+    display: black;
+    color: #7700ff;
+}
+
+.hero h2 {
+    font-size: 1.5rem;
+    margin-top: 0.8rem;
+    font-weight: 500;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    width: fit-content;
+
+    background: #7700ff;
+    color: 0.8 rem 1.5rem;
+    border: none;
+
+    border-radius: 5px;
+    font-weight: 500;
+}
+
+.hero .btn-wrapper {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.hero .icon-wrapper {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.hero .icon-wrapper a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    display: grid;
+    place-content: center;
+    background: #1b1b1b;
+    color: white;
+    border-radius: 100%;
+    margin-right: 0.5rem;
+}
+
+.hero .icon-wrapper a:hover {
+    background-color: #7700ff;
+}
+
+.hero img {
+    width: 300px;
+    height: 300px;
+}
+
+@media screen and (max-width:540px) {}
