--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,9 +4,11 @@
     box-sizing: border-box;
 }
 
-body {
+body,
+html {
     background: white(163, 44, 44);
     font-family: 'Poppins', sans-serif;
+    scroll-snap-align: smooth;
 }
 
 a {
@@ -18,8 +20,9 @@ ul {
 }
 
 img {
-    width: 50%;
+    width: 40%;
     border-radius: 50%;
+    border-color: purple;
 }
 
 /* global classes */
@@ -157,4 +160,78 @@ header .nav-logo span {
     height: 300px;
 }
 
-@media screen and (max-width:540px) {}
+
+
+
+.about .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+
+
+}
+
+.about .content {
+    max-width=600x;
+    display: grid;
+    gap: 1rem;
+}
+
+.about .content h2 {
+    font-size=2rem;
+    text-transform: capitalize;
+    margin-bottom: 2rem;
+}
+
+.about .content h2 span {
+    color: #7700ff;
+
+}
+
+.about .content .btn {
+    margin-top: 1rem;
+}
+
+@media screen and (max-width:768px) {
+
+    .about .image {
+        display: none;
+    }
+}
+
+.skills .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem 2rem;
+    margin-bottom: 4rem;
+}
+
+.skills .skills-wrapper span {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 10%;
+    font-weight: 300;
+}
+
+.skills h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    border-bottom: 5px solid #7700ff;
+    width: fit-content;
+    margin: auto;
+    padding-bottom: 1rem;
+
+}
+
+.skills .skills-wrapper {
+    font-size: 0.5rem;
+
+}
+
+@media screen and (max-width:768px) {
+    .skills .skills-wrapper span {
+        font-size: 1.5rem;
+    }
+}
